<resources>
    <string name="app_name">Movie Mania</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string-array name="quality">
        <item>All</item>
        <item>720p</item>
        <item>1080p</item>
        <item>3D</item>
    </string-array>

    <string-array name="Rating">
        <item>All</item>
        <item>9+</item>
        <item>8+</item>
        <item>7+</item>
        <item>6+</item>
        <item>5+</item>
        <item>4+</item>
        <item>3+</item>
        <item>2+</item>
        <item>1+</item>
    </string-array>

    <string-array name="Genre">
        <item>All</item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Biography</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>Film-Noir</item>
        <item>Game-Show</item>
        <item>History</item>
        <item>Horror</item>
        <item>Music</item>
        <item>Musical</item>
        <item>Mystery</item>
        <item>News</item>
        <item>Reality-TV</item>
        <item>Romance</item>
        <item>Sci-Fi</item>
        <item>Sport</item>
        <item>Talk-Show</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>

    <string-array name="order_by">
        <item>Latest</item>
        <item>Oldest</item>
        <item>Seeds</item>
        <item>Peers</item>
        <item>Year</item>
        <item>Rating</item>
        <item>Likes</item>
        <item>Alphabetical</item>
        <item>Downloads</item>
    </string-array>
    <string name="appName">Movie Mania</string>
    <string name="hintSearchMovie">Enter Movie Name</string>
    <string name="quality">Quality</string>
    <string name="rating">Rating</string>
    <string name="genre">Genre</string>
    <string name="order">Order by</string>
    <string name="seachB">Search</string>
</resources>
