<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#EEEFF5"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:id="@+id/SearchLl"
    android:layout_height="wrap_content"
    android:background="#ffff"
    android:layout_alignParentTop="true"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seachB"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:fontFamily="cursive"
        android:textSize="50sp"
        />
</LinearLayout>

    <EditText
        android:id="@+id/searchMovie"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:drawableStart="@drawable/movie_title"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:hint="@string/hintSearchMovie"
        android:drawablePadding="15dp"
        android:background="@drawable/white_bg"
        android:layout_marginStart="50dp"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_below="@+id/SearchLl"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:inputType="textPersonName"
         />

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/SearchLl"
        android:layout_marginStart="15dp"
        android:layout_centerInParent="true"
        android:background="@drawable/blue_round"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:contentDescription="@string/seachB"
        android:focusable="true"
        android:elevation="15dp"
        android:layout_marginEnd="50dp"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/search_white" />

    <LinearLayout
        android:id="@+id/textViewLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/searchMovie"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:weightSum="4"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/qualityTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="17sp"
            android:textColor="#3F51B5"
            android:background="#00FFFFFF"
            android:text="@string/quality" />

        <TextView
            android:id="@+id/RatingTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="17sp"
            android:textColor="#3F51B5"
            android:text="@string/rating" />

        <TextView
            android:id="@+id/genreTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:textSize="17sp"
            android:textColor="#3F51B5"
            android:text="@string/genre"/>

        <TextView
            android:id="@+id/orderTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:gravity="center"
            android:textSize="17sp"
            android:textColor="#3F51B5"
            android:text="@string/order"/>

    </LinearLayout>


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_below="@+id/textViewLL"
       android:layout_marginTop="5dp"
       android:layout_marginEnd="50dp"
       android:layout_marginStart="50dp"
       android:layout_centerHorizontal="true"
       android:weightSum="4">


    <Spinner
        android:id="@+id/qualitySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:foregroundTint="#ffff"
        android:layout_weight="1"
        android:background="@drawable/light_blue"
        android:entries="@array/quality"
        />


    <Spinner
        android:id="@+id/ratingSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:padding="5dp"
        android:layout_weight="1"
        android:foregroundTint="#ffff"
        android:background="@drawable/light_blue"
        android:entries="@array/Rating"
        />

    <Spinner
        android:id="@+id/genreSpinner"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:padding="5dp"
        android:background="@drawable/light_blue"
        android:entries="@array/Genre"/>


    <Spinner
        android:id="@+id/orderSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:padding="5dp"
        android:background="@drawable/light_blue"
        android:layout_weight="1"
        android:entries="@array/order_by"/>
   </LinearLayout>
</RelativeLayout>